Fix: Cleaner methods and better unntakshåndtering